# PocketWatch

./: .env.example  .gitignore  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
.github/workflows/: desktop-release.yml
desktop/: .gitignore  README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: SECURITY-REVIEW-NOTES.md  TRAVEL-PROVIDERS.md
infrastructure/: com.pocketwatch.caffeinate.plist  com.pocketwatch.cloudflared.plist  com.pocketwatch.nextjs.plist  setup-local.sh  start-nextjs.sh
prisma/: CLAUDE.md  schema.prisma
prisma/migrations/: README.md
public/: manifest.json  sw.js
scripts/: backfill-tx.mjs  check-wallets.ts  diagnose-data.ts  generate-icons.mjs  local-sync-daemon.ts  seed-demo-extras.ts  seed-demo.ts  seed-portfolio-snapshots.ts
src/: instrumentation.ts  middleware.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: error-boundary.tsx  feedback-banner.tsx  feedback-button.tsx  feedback-modal.tsx  finance-sync-poller.tsx  global-sync-indicator.tsx  global-sync-poller.tsx  landing-page.tsx  offline-banner.tsx  push-notification-prompt.tsx  pwa-install-prompt.tsx  theme-toggle.tsx
src/hooks/: use-api.ts  use-chat.ts  use-notification-center.ts  use-online-status.ts  use-passkey.ts  use-portfolio-chart-data.ts  use-push-notifications.ts  use-sidebar-prefs.ts  use-touch-device.ts  use-tracker.ts  use-trip-briefing.ts  use-trips.ts
(+711 files in other folders)
